Update paper reference in README

--- a/README
+++ b/README
@@ -6,6 +6,7 @@ for inclusive hadron production in pA collisions, described in the paper
 
  Anna M. Stasto, Bo-Wen Xiao, David Zaslavsky
  "Towards the Test of Saturation Physics Beyond Leading Logarithm"
+ Phys. Rev. Lett. 112, 012302 (2014)
  arXiv:1307.4057 [hep-ph]
 
 Please cite this paper if you use the results of the code in a publication.
